--- a/goal.yaml
+++ b/goal.yaml
@@ -14,13 +14,13 @@ prompt: |
 
   # Re-prime for new view
   - Use the `paste_image` tool to paste a straight, full length reference image into the text input area. The selector is `div.ql-editor[role="textbox"]`.
-  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Dress her in formal wear. Change background to an office. Make her shrugging."
+  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Change attire to formal wear. Change background to an office. Make her shrugging."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
 
   # Re-prime for new view
   - Use the `paste_image` tool to paste a straight, knee length reference image into the text input area. The selector is `div.ql-editor[role="textbox"]`.
-  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Change background to a beach. Dress her in 2 piece beachwear. Make her sitting on a towel. Set dawn lighting."
+  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Change background to a beach. Change attire to 2 piece beachwear. Make her sitting on a towel. Set dawn lighting."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
 
@@ -42,7 +42,7 @@ prompt: |
   - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Change to head shot. Show a happy emotion. Make it a close portrait. Change background to a cafe."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
-  - Use the `type_text` tool to enter the prompt: Change to head shot. "Make her pointing. Dress her in a saree. Change background to an office."
+  - Use the `type_text` tool to enter the prompt: Change to head shot. "Make her pointing. Change attire to a saree. Change background to an office."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
   - Use the `type_text` tool to enter the prompt: "Change to head shot. Change background to a park. Make her look annoyed."
@@ -58,13 +58,13 @@ prompt: |
 
 
   # Re-prime for new view
-  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Make it a waist length shot. Dress her in a saree. Change background to a park. Show a happy emotion. Make her standing."
+  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Make it a waist length shot. Change attire to a saree. Change background to a park. Show a happy emotion. Make her standing."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
-  - Use the `type_text` tool to enter the prompt: "Dress her in a kurta. Change background to a cafe. Make her sitting."
+  - Use the `type_text` tool to enter the prompt: "Change attire to a kurta. Change background to a cafe. Make her sitting."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.  - Use the `paste_image` tool to paste a side profile, full length reference image into the text input area. The selector is `div.ql-editor[role="textbox"]`.
-  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Make her running. Dress her in athletic wear. Change background to an adventure scene."
+  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Make her running. Change attire to athletic wear. Change background to an adventure scene."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
 
@@ -78,7 +78,7 @@ prompt: |
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
   - Use the `paste_image` tool to paste a straight, full length reference image into the text input area. The selector is `div.ql-editor[role="textbox"]`.
-  - Use the `type_text` tool to enter the prompt: "Dress her in formal wear. Change background to an office. Set evening light."
+  - Use the `type_text` tool to enter the prompt: "Change attire to formal wear. Change background to an office. Set evening light."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
   - Use the `type_text` tool to enter the prompt: "Change attire to a beachwear. 2 piece beach attire. Change background to a beach. Make her in a kneeling pose."
@@ -90,26 +90,26 @@ prompt: |
 
   # Re-prime for new view
   - Use the `paste_image` tool to paste a straight, close portrait reference image into the text input area. The selector is `div.ql-editor[role="textbox"]`.
-  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Dress her in party wear. Set night light. Make it a close portrait. Show an 'ooh' emotion."
+  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Change attire to party wear. Set night light. Make it a close portrait. Show an 'ooh' emotion."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
 
   ## Set 4: Back Profile Reference Image
   # Reference Image Paste: Back profile, waist length of an Indian woman in her mid-20s.
   - Use the `paste_image` tool to paste a back profile, waist length reference image into the text input area. The selector is `div.ql-editor[role="textbox"]`.
-  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Make it a back profile. Make her in a dynamic running pose. Dress her in a t-shirt and jeans. Change background to an adventure scene."
+  - Use the `type_text` tool with the same selector `div.ql-editor[role="textbox"]` to enter the prompt: "Make it a back profile. Make her in a dynamic running pose. Change attire to a t-shirt and jeans. Change background to an adventure scene."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
-  - Use the `type_text` tool to enter the prompt: "Make it a back profile. Dress her in a saree. Set evening light. Change background to a park."
+  - Use the `type_text` tool to enter the prompt: "Make it a back profile. Change attire to a saree. Set evening light. Change background to a park."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
     ## Set 1: Straight Profile Reference Image - Headshot
   # Reference Image Paste: Straight, close portrait (headshot) of an Indian woman in her mid-20s.
   - Use the `paste_image` tool to paste a straight, close portrait reference image into the text input area. The selector is `div.ql-editor[role="textbox"]`.
-  - Use the `type_text` tool to enter the prompt: "Dress her in a t-shirt and jeans. Change background to home. Set evening light."
+  - Use the `type_text` tool to enter the prompt: "Change attire to a t-shirt and jeans. Change background to home. Set evening light."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
-  - Use the `type_text` tool to enter the prompt: "Dress her in party wear. Set home dimlit. Make her waving."
+  - Use the `type_text` tool to enter the prompt: "Change attire to party wear. Set home dimlit. Make her waving."
   - Click the send message button using the selector `button[aria-label="Send message"]`.
   - Wait for 60 seconds for the image to be generated.
 
