refactor to hit 500 less. context mgr, goal - task decomposition

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 logging:
-  level: "SUCCESS"
+  level: "DEBUG"
 
 llm:
   provider: "google_genai_studio"
@@ -12,7 +12,9 @@ llm:
     model: "Gemini-2.0-Flash-Preview"
     api_key: "kQMgOqm4E1QF80V3UZY_Yqiu-w3pEi_k7P_KV19m8oY" # Replace with your actual key
     base_url: "https://api.poe.com/v1" # Optional, for proxy
-
+context_management:
+  max_history_items: 10
+  max_tool_output_tokens: 2500
 # Configure the browser adapter to use browsermcp
 browser:
   adapter: "playwright"
