test omni parser

--- a/playbooks/character-sheet-base/goal.yaml
+++ b/playbooks/character-sheet-base/goal.yaml
@@ -8,6 +8,7 @@ tasks:
       You MUST call the `finish_task` tool immediately after the second image generation is complete.
 
       # Image 1: Casual Evening Look
+      1. Navigate to https://gemini.google.com/u/2/app
       2. Paste the straight, close portrait reference image using `paste_image` with selector `div.ql-editor[role="textbox"]`.
       3. Use `type_text` to enter the prompt: "Change attire to a t-shirt and jeans. Change background to home. Set evening light."
       4. Click the send button with selector `button[aria-label="Send message"]`.
