--- a/playbooks/linkedin-job-search/goal.yaml
+++ b/playbooks/linkedin-job-search/goal.yaml
@@ -10,17 +10,13 @@ steps:
   - name: "Navigate to LinkedIn Jobs"
     type: "agent_step"
     prompt: |
-      Navigate to the URL https://www.linkedin.com/jobs.
+      Navigate to the URL https://www.linkedin.com/jobs/
 
   - name: "Enter Job Title in Search Bar"
     type: "agent_step"
     prompt: |
-      Using your visual understanding of the page, type "Principal AI Engineer" into the main job search text input field.
-
-  - name: "Press enter "
-    type: "agent_step"
-    prompt: |
-      Press the "Enter" key to start search.
+      1. Using your visual understanding of the page, type "Principal AI Engineer" into the main job search text input field.
+      2. Use `press_key`  to Press the "Enter" key to start search 
 
   - name: "Confirm Job Listings are Displayed"
     type: "human_intervention"
